FinancialReport/force-app/main/default/objects/CAM_Report_Rows__mdt/CAM_Report_Rows__mdt.object-meta.xml
<CustomObject>
    <label>CAM Report Rows</label>
    <pluralLabel>CAM Report Rows</pluralLabel>
</CustomObject>