FinancialReport/force-app/main/default/objects/CAM_Report_Rows__mdt/fields/CAM_Report_Table__c.field-meta.xml
<CustomField>
    <fullName>CAM_Report_Table__c</fullName>
    <label>CAM Report Table</label>
    <referenceTo>CAM_Report_Table__mdt</referenceTo>
    <relationshipLabel>CAM Report Rows</relationshipLabel>
    <relationshipName>CAM_Report_Rows</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>