FinancialReport/force-app/main/default/objects/CAM_Report_Rows__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Input</fullName>
                <default>true</default>
                <label>User Input</label>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>