FinancialReport/force-app/main/default/objects/CAM_Report_Rows__mdt/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>