FinancialReport/force-app/main/default/objects/CAM_Report_Rows__mdt/fields/Row_Label__c.field-meta.xml
<CustomField>
    <fullName>Row_Label__c</fullName>
    <label>Row Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>